kubernetes/apps/business/scale-tv/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: scale-tv
  annotations:
    external-dns.alpha.kubernetes.io/controller: none
spec:
  hostnames:
    - tv.bighornbyte.com
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https-bighornbyte
  rules:
    - matches:
        - path: { type: PathPrefix, value: / }
      backendRefs:
        - name: scale-tv
          port: 8000
